--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,11 @@
 /* Core Styles */
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap'); /* Good */
-
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 body {
     font-weight: lighter;
     font-family: 'Montserrat', sans-serif; 
+    /* font-family: 'Poppins', sans-serif; */
     color: rgb(63, 63, 63);
     margin: 0;
 }
@@ -51,7 +52,7 @@ li a:hover {
     opacity: 0.6;
 }
 .content-wrap {
-    padding: 0 4rem 4.5rem;
+    padding: 0 4rem 4rem 4rem;
 }
 
 #showcase {
@@ -228,8 +229,85 @@ footer {
 
 /* Media Queries */
 
-@media(max-width: 700px) {
-
+@media(max-width: 720px) {
+    p {
+        font-size: 14px;
+    }
+    .section-title {
+        float: none;
+    }
+    .content-wrap {
+        /* padding: 0 2rem; */
+    }
+    .header-right {
+        display: none;
+    }
+    .profile-wrap {
+        display: flex;
+        flex-direction: column;
+    }
+    #section-b {
+        text-align: center;
+    }
+    .projects-wrap ul {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    .project {
+        padding: 1rem;
+    }
+    .project img {
+        display: block;
+        width: 55vw;
+        height: auto;
+        margin: 0 auto;
+        /* border: 1px solid rgb(236, 236, 236); */
+        /* box-shadow: 0 2px 9px black; */
+    }
+    .skills-content p {
+        font-size: 2vw;
+    }
+}
+@media(max-width: 480px) {
+    .content-wrap {
+        padding: 0 10% 10% 10%;
+    }
+    .section-title {
+        margin-top: 1rem;
+    }
+    .profile-img {
+        margin: 1rem 0;
+    }
+    /* .my-name {
+        margin: 0 auto;
+    } */
+    .name-romaji {
+        font-size: 16px;
+    }
+    .self-introduction {
+        padding: 1rem;
+    }
+    .project {
+        padding: 1rem 0;
+    }
+    .project h3 {
+        margin: 1rem;
+    }
+    .project-description {
+        margin: 1rem 0;
+    }
+    .skills-wrap {
+        height: 230px;
+    }
+    .skills-wrap .section-title {
+        margin-bottom: 1rem;
+    }
+    #section-c {
+        text-align: center;
+    }
 }
 
 
@@ -309,12 +387,49 @@ footer {
     box-sizing: border-box;
   } */
 
-  .test {
-      font-family: Monaco, "Courier New"
-  }
-  .test2 {
-      font-family: Lato, Ariel, Tahoma, sans-serif;
-  }
-  .test3 {
-    font-family: "Playfair Display", Arial, Tahoma, sans-serif;
-  }
+.test {
+    font-family: Monaco, "Courier New"
+}
+.test2 {
+    font-family: Lato, Ariel, Tahoma, sans-serif;
+}
+.test3 {
+font-family: "Playfair Display", Arial, Tahoma, sans-serif;
+}
+#logo {
+
+}
+
+#log path:nth-child(1) {
+    stroke-dasharray: 3;
+    /* stroke-dasharray: 100; */
+    stroke-dashoffset: 100;
+}
+#log path:nth-child(2) {
+    stroke-dasharray: 10px;
+    stroke-dashoffset: 3px;
+}
+#log path:nth-child(3) {
+    stroke-dasharray: 10px;
+    
+}
+#log path:nth-child(4) {
+    stroke-dasharray: 10px;
+    
+}
+#log path:nth-child(5) {
+    stroke-dasharray: 10px;
+    
+}
+#log path:nth-child(6) {
+    stroke-dasharray: 10px;
+    
+}
+#log path:nth-child(7) {
+    stroke-dasharray: 10px;
+    
+}
+#log path:nth-child(8) {
+    stroke-dasharray: 10px;
+    
+}
