--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,12 @@
 /* Core Styles */
-
+* {
+    /* overflow: hidden; */
+}
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap'); /* Good */
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 body {
+    overflow-x: hidden;
+    /* width: 100vw; */
     font-weight: lighter;
     font-family: 'Montserrat', sans-serif; 
     /* font-family: 'Poppins', sans-serif; */
@@ -20,17 +24,17 @@ a {
     color: rgb(63, 63, 63);
 }
 
+/* 
 header {
-    height: 3rem;
-    /* border-bottom: 1px solid grey; */
     box-shadow: 1px 0 8px rgb(211, 211, 211);
     padding: auto 3rem;
     z-index: 1;
     position: fixed;
     width: 100%;
     background: #fff;
-    /* opacity: 0.9; */
+    
 }
+
 
 .header-wrap {
     height: auto;
@@ -42,7 +46,154 @@ header {
     float: left;
 
     margin: 0 1rem;
+} */
+main {
+    position: relative;
+    top: 4rem;
 }
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: rgb(63, 63, 63);
+    /* text-align: center; */
+    font-family: 'Montserrat', sans-serif; 
+}
+li {
+    list-style: none;
+}
+header {
+    width: 100%;
+    height: 4rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 7rem;
+    align-items: center;
+    position: fixed;
+    background: rgba(255, 255, 255, .8);
+    z-index: 2;
+}
+nav {
+    
+    display: flex;
+    justify-content: space-around;
+
+}
+.logo {
+    /* border: 1px solid red; */
+    position: relative;
+    top: 1px;
+}
+.logo img {
+    height: 32px;
+}
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* border: 1px solid red; */
+    
+
+}
+.nav-links li {
+    margin-left: 2rem;
+}
+.burger {
+    display: none;
+    cursor: pointer;
+    /* border: 1px solid rgb(139, 139, 139);
+    border-radius: 3px; */
+
+}
+.burger div {
+    width: 22px;
+    height: 2px;
+    background-color: rgb(90, 90, 90);
+    margin: 5px;
+    transition: all .3s ease;
+    border: 1px solid rgb(165, 163, 163);
+    border-radius: 3px;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 4rem;
+        background: rgba(65, 65, 65, 0.9);
+        /* display: table-column-group; */
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        /* justify-content: center; */
+        width: 35%;
+        transform: translateX(100%);
+        transition: transform .5s ease-in;
+    }
+    
+    .nav-links li {
+        color: rgb(255, 255, 255);
+        margin-left: 0;
+        opacity: 0;
+        /* height: 60px;
+        width: 100%; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        vertical-align: center;
+        border-bottom: 1px solid rgb(246, 246, 246);
+        /* margin: auto; */
+        
+    }
+    /* .nav-links li:nth-child(2n+1) {
+        background: rgb(250, 250, 250);
+    } */
+    .burger {
+        display: block;
+    }
+}
+/* Toggler */
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(250px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+    opacity: 0;
+}
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
+
+
+
+
+
+
+
+
+
 li a {
     text-decoration: none;
     list-style: none;
@@ -52,11 +203,13 @@ li a:hover {
     opacity: 0.6;
 }
 .content-wrap {
-    padding: 0 4rem 4rem 4rem;
+    padding: 0 7rem 4rem 7rem;
 }
 
 #showcase {
     height: 250px;
+    position: relative;
+    top: 4rem;
 }
 #showcase .bg-image {
     position: absolute;
@@ -70,19 +223,36 @@ li a:hover {
     z-index: -1;
     /* opacity: 0.4; */
 }
-#showcase .content-wrap {
-    text-align: right;
-    color: #fff;
+.showcase-text {
+    /* position: absolute; */
+    padding: 0 7rem;
+    float: right;
+    vertical-align: center;
+    height: 100%;
+    /* color: white; */
+    position: relative;
+    top: 33px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-#showcase h1 {
-    padding-top: 100px;
-    margin: 0;
+.showcase-text h1, .showcase-text p {
+    color: white; 
+    text-shadow: 1px 1px 1px rgb(98, 98, 98);
+    /* padding-top: 100px; */
+    /* margin: 0; */
 }
+
 
 .section-title {
     float: left;
-    margin-top: 8rem;
+    margin: 5rem 0;
     font-size: 36px;
+    
+}
+.color-white {
+    color: white;
 }
 .content-wrap {
     display: flex;
@@ -92,21 +262,25 @@ li a:hover {
 /* Section-a */
 #section-a {
     /* border: 1px solid black; */
-    text-align: center;
+    /* text-align: center; */
+    
 }
 
-#section-a .section-title {
-    margin-bottom: 0;
-}
 /* might be better to integrate with other section title */
 
 .profile-wrap {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 66%;
+    grid-gap: 4%;
+}
+.profile-img-wrap {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
 }
 .profile-img {
-    width: 80%;
-    margin: 3rem auto;
+    width: 100%;
+    /* margin: auto; */
     border-radius: 5px;
     box-shadow: 0 0 10px rgb(13, 13, 13);
 }
@@ -114,7 +288,15 @@ li a:hover {
 .self-introduction {
     padding: 3rem;
     text-align: left;
+    background: rgb(246, 246, 246);
+    position: relative;
+    border-radius: 14px;
+    border: 4px solid rgb(230, 230, 230)
+    /* border-top: 4px solid rgb(255, 138, 138); */
+    /* border-bottom: 4px solid rgb(255, 138, 138); */
+    /* box-shadow: 0px 0px 4px rgb(255, 138, 138); */
 }
+
 .my-name {
     font-size: 24px;
     margin: 0 0 10px 12px;
@@ -126,12 +308,10 @@ li a:hover {
 /* Section-b */
 #section-b {
     height: auto; /* tempo */
-    background: rgb(63, 63, 63);
+    background: rgb(41, 41, 41);
     color: #fff;
 }
-#section-b .section-title {
-    margin-bottom: 0;
-}
+
 
 .projects-wrap ul {
     display: grid;
@@ -143,8 +323,9 @@ li a:hover {
 .project {
     padding: 2rem;
 }
-.project h3 {
-    margin: 1.5rem;
+h3 {
+    color: white;
+    margin: 0;
     font-size: 24px;
 }
 .project img {
@@ -165,6 +346,7 @@ li a:hover {
 .project-description {
     text-align: left;
     margin: 3rem 0;
+    color: white;
 }
 .project a {
     color: white;
@@ -191,6 +373,7 @@ li a:hover {
     /* vertical-align: center; */
 }
 .skills-content p {
+    text-align: left;
     font-family: Monaco, "Courier New";
     margin-bottom: 5px;
     padding: 0;
@@ -210,14 +393,147 @@ li a:hover {
 
 /* Section-d */
 #section-d {
-    background: #1B5F98;
+    /* background: #1B5F98; */
+    /* border: 3px solid #1b5f98; */
     color: white;
     text-align: center;
-    padding-top: 2rem;
-    height: 120px;
+    padding-top: 6rem;
+    height: 400px;
+    width: 100vw;
+    /* overflow: hidden; */
 }
+section {
+    /* overflow: hidden; */
+}
+.section-d-bg {
+    width: 100vw;
+    /* overflow: hidden; */
+    position: absolute;
+    width: 0;
+    height: 0;
+	border-right: 300vw solid transparent;
+    border-bottom: 400px solid #81C7D4;
+    z-index: -1;
+    
+}
+.section-d-bg2 {
+    
+    position: absolute;
+    width: 0;
+    height: 0;
+    right: 0;
+	border-left: 70vw solid transparent;
+    border-bottom: 400px solid rgb(151, 151, 151);
+    z-index: -1;
+}
+#section-d .section-title {
+    margin-bottom: 3rem;
+}
+.links {
+    width: 300px;
+    /* height: 300px; */
+    /* border: 1px solid black; */
+}
+.links ul {
+    display: flex;
+    justify-content: space-around;
+    /* width: 400px; */
+    /* border: 2px solid cornflowerblue; */
+    margin-bottom: 2rem;
+}
+.links ul li {
+    /* border: 1px solid coral; */
+    /* padding: 1rem; */
+    /* float: left; */
+    position: relative;
+    /* justify-content: center; */
+    list-style: none;
+    /* width: 140px; */
+    /* height: 140px; */
+    /* margin: 0 auto; */
+    /* transform: rotateX(45deg); */
+    
+}
+.links ul li span {
+    font-size: 40px;
+    height: 30px;
+}
+/* .comment {
+    position: absolute;
+    top: -50px;
+    left: -9px;
+    width: 15rem;
+    font-size: 18px !important; 
+} */
+/* .links ul li a span .fa-linkedin {
+    height: 40px;
+    border-radius: 5px;
+    font-size: 20px;
+    color: #fff;
+    background: #0077b5;;
+    
+} */
+.links ul li a img {
+    width: 35px;
+    /* height: 35px; */
+    border-radius: 5px;
+    margin-top: 2px;
+}
+.section-d-wrap {
+    margin-top: 0rem;
+    padding-bottom: 0;
+    width: 100%;
+    height: 400px;
+    position: relative;
+    text-align: left;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+i.fa {
+    /* width: 20px; */
+    /* color: #0077b5; */
+    /* background: white; */
+    font-size: 40px;
+    /* z-index:3; */
+}
+.email {
+   margin-left: 17px; 
+   font-size: 20px;
+
+}
+
+/* div {
+	width: 0;
+	height: 0;
+	border-right: 350vw solid transparent;
+	border-bottom: 450px solid #81C7D4;
+} */
+
 .section-d p {
     margin: 0 auto;
+}
+.section-d-left {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+}
+.section-d-right {
+    /* border: 1px solid black; */
+    /* padding-top: 60%; */
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+}
+.logo-bottom {
+    height: 40px;
+    width: 60px;
+    margin-bottom: 15px;
+    opacity: .6;
+}
+.section-d-right p {
+    font-size: 14px;
+    margin-bottom: 13px;
 }
 /* .section-d-wrap {
     margin-top: 10rem auto;
