--- a/public/style.css
+++ b/public/style.css
@@ -379,6 +379,7 @@ h3 {
 
 .project-on-hover {
     height: 100%;
+    width: 100%;
     padding: 1.5rem;
     /* border: 2px solid pink; */
     position: absolute;
@@ -422,7 +423,7 @@ h3 {
     /* border: 1px solid pink; */
     width:100%;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 70% 30%;
     
     /* position: absolute; */
     /* bottom: 1.5em; */
@@ -501,9 +502,134 @@ h3 {
     
 }
 /*  */
+@media(max-width: 1200px) {
+    /* body {
+        display: none;
+    } */
+    .project-top p {
+        font-size: 13px;
+    }
+    .project-bottom-left li p {
+        padding: 10px;
+        
+        
+        font-size: 10px;
+        
+    }
+    .project-bottom-right li {
+        font-size: 10px;
+    }
+}
+@media(max-width: 1125px) {
+    .project-bottom-left li p {
+        padding: 7px;      
+    }
+}
+@media(max-width: 960px) {
+    .project-bottom-left li p {
+        padding: 6px;
+    }
+    .projects-ul {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    .project {
+        /* padding: 1rem; */
+        border: 1px solid orange;
+        /* height: auto; */
+        margin-bottom: 2rem;
 
+    }
+    .project img {
+        /* display: block; */
+        /* width: 55vw; */
+        height: auto;
+        margin: 0 auto;
+        /* border: 1px solid rgb(236, 236, 236); */
+        /* box-shadow: 0 2px 9px black; */
+    }
 
+    .project-top p {
+        font-size: 18px;
+    }
+    .project-bottom-left li p {
+        padding: 10px;
+        
+        
+        font-size: 18px;
+        
+    }
+    .project-bottom-right li {
+        font-size: 18px;
+    }
+}
+@media(max-width: 770px) {
+    /* body {
+        display: none;
+    } */
+    .project-on-hover {
+        position: relative;
+        opacity: 1;
+    }
+    .project-top p {
+        font-size: 14px;
+    }
+    .project-bottom-left li p {
+        padding: 10px;
+        
+        
+        font-size: 14px;
+        
+    }
+    .project-bottom-right li {
+        font-size: 14px;
+    }
+    h3 {
+        margin-top: 2rem auto 1rem;
+        text-align: center;
+    }
+}
+@media(max-width: 700px) {
+    .on-hover-wrap {
+        grid-template-rows: 50% 50%;
+    }
+    .project-bottom {
 
+        /* display: none; */
+        /* grid-template-rows: 1fr 1fr !important; */
+        
+        /* position: absolute; */
+        /* bottom: 1.5em; */
+        /* padding: 0 10px; */
+        display: block;
+        height: auto;
+    }
+    .project-bottom-left {
+        /* justify-content: space-around; */
+        margin-bottom: 3rem;
+    }
+    .project-bottom-right {
+        justify-content: left;
+        margin-top: 3rem;
+    }
+    .project-bottom-right li {
+        margin: 1rem .5rem 0 0;
+        
+    }
+}
+/* 
+.project {
+    padding: 1rem 0;
+}
+.project h3 {
+    margin: 1rem;
+}
+.project-description {
+    margin: 1rem 0;
+} */
 
 /* Section-c */
 #section-c {
@@ -709,7 +835,7 @@ i.fa {
         float: none;
     }
     .content-wrap {
-        /* padding: 0 2rem; */
+        padding: 0 10% 10% 10%;
     }
     .header-right {
         display: none;
@@ -721,24 +847,6 @@ i.fa {
     #section-b {
         text-align: center;
     }
-    .projects-wrap ul {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-    .project {
-        padding: 1rem;
-    }
-    .project img {
-        display: block;
-        width: 55vw;
-        height: auto;
-        margin: 0 auto;
-        /* border: 1px solid rgb(236, 236, 236); */
-        /* box-shadow: 0 2px 9px black; */
-    }
     .skills-content p {
         font-size: 2vw;
     }
@@ -746,9 +854,7 @@ i.fa {
 @media(max-width: 480px) {
     header {
     }
-    .content-wrap {
-        padding: 0 10% 10% 10%;
-    }
+
     .section-title {
         margin: 3rem auto 1rem;
         text-align: center;
@@ -765,15 +871,7 @@ i.fa {
     .self-introduction {
         padding: 1rem;
     }
-    .project {
-        padding: 1rem 0;
-    }
-    .project h3 {
-        margin: 1rem;
-    }
-    .project-description {
-        margin: 1rem 0;
-    }
+
     .skills-wrap {
         height: 230px;
     }
