--- a/public/style.css
+++ b/public/style.css
@@ -538,7 +538,7 @@ h3 {
     }
     .project {
         /* padding: 1rem; */
-        border: 1px solid orange;
+        
         /* height: auto; */
         margin-bottom: 2rem;
 
@@ -551,9 +551,14 @@ h3 {
         /* border: 1px solid rgb(236, 236, 236); */
         /* box-shadow: 0 2px 9px black; */
     }
-
+    .project-on-hover {
+        /* height: ; */
+    }
     .project-top p {
         font-size: 18px;
+    }
+    .project-bottom-left {
+        margin-bottom: 1.5rem;
     }
     .project-bottom-left li p {
         padding: 10px;
@@ -564,6 +569,7 @@ h3 {
     }
     .project-bottom-right li {
         font-size: 18px;
+        margin-bottom: 1.5rem;
     }
 }
 @media(max-width: 770px) {
