--- a/public/style.css
+++ b/public/style.css
@@ -101,6 +101,10 @@ nav {
 }
 .nav-links li {
     margin-left: 2rem;
+    cursor: pointer;
+}
+.nav-links li:hover {
+    opacity: .7;
 }
 .burger {
     display: none;
@@ -211,6 +215,7 @@ li a:hover {
     position: relative;
     top: 4rem;
 }
+
 #showcase .bg-image {
     position: absolute;
     /* background: #333 url('https://static.pexels.com/photos/248515/pexels-photo-248515.png'); */
@@ -225,23 +230,55 @@ li a:hover {
 }
 .showcase-text {
     /* position: absolute; */
-    padding: 0 7rem;
+    padding: 0;
     float: right;
     vertical-align: center;
     height: 100%;
     /* color: white; */
-    position: relative;
-    top: 33px;
+    position: absolute;
+    top: 0;
+    left: 60%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 }
 .showcase-text h1, .showcase-text p {
     color: white; 
-    text-shadow: 1px 1px 1px rgb(98, 98, 98);
+    text-shadow: 1px 1px 1px rgb(149, 149, 149);
     /* padding-top: 100px; */
     /* margin: 0; */
+}
+.showcase-text h1 {
+    font-size: 36px;
+    margin: 1rem auto .5rem;
+    animation: toRight .9s linear forwards;
+    position: relative;
+}
+.showcase-text p {
+    animation: toLeft .9s linear forwards;
+    position: relative;
+    margin: 0 auto;
+}
+@keyframes toRight {
+    from {
+        opacity: 0;
+        left: -20%;
+    }
+    to {
+        opacity: 1;
+        left: 0;
+    }
+}
+@keyframes toLeft {
+    from {
+        opacity: 0;
+        left: 25%;
+    }
+    to {
+        opacity: 1;
+        left: 0;
+    }
 }
 
 
@@ -849,6 +886,14 @@ i.fa {
     .profile-wrap {
         display: flex;
         flex-direction: column;
+    }
+    .profile-img-wrap {
+        justify-content: center;
+    }
+    .profile-img {
+        height: 300px;
+        width: 300px;
+        margin: 2rem auto;
     }
     #section-b {
         text-align: center;
